--- a/src/pages/inscription/registe.css
+++ b/src/pages/inscription/registe.css
@@ -86,7 +86,7 @@
     padding-top: 90px;
   }
 
-  .icone1{
+  .icone{
     position: absolute;
     top: 12.7rem;
     left: 2.3rem;
@@ -94,7 +94,7 @@
     color: rgb(77, 161, 194)
   }
 
-  .icone2{
+  .icone{
     position: absolute;
     top: 17.9rem;                
     left: 2.5rem;
