--- a/src/pagesEtudiant/progamme/programme.css
+++ b/src/pagesEtudiant/progamme/programme.css
@@ -4,7 +4,9 @@ height: 129vh;
 }
 
 
-
+.h3pr{
+    color: black;
+}
 
 
 
@@ -13,8 +15,9 @@ height: 129vh;
 
 @media screen and (min-width: 320px) {
     .bodyy{
-        height: 320vh;
+        height: 340vh;
         }
+
 }
 
 
@@ -24,7 +27,7 @@ height: 129vh;
 /* responsive mode tablet */
 @media screen and (min-width: 768px) {
     .bodyy{
-        height: 210vh;
+        height: 230vh;
         }
 }
 
