--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -36,6 +36,12 @@
     --bg-color: #5a5c69;
     --bg-color1: #4e73df;
 }
+
+
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -386,15 +392,6 @@
     margin: 15px;
   }
   
-  /* EditProfileCoach */.edit-profile-container {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
 
 .profile-info {
   display: flex;
@@ -449,55 +446,12 @@ margin-top: 5rem;
   text-align: right;
 }
 
-/* .change-password-button {
-  margin-top: 10px;
-  padding: 0;
-  background-color: transparent;
-  color: #007bff;
-  border: none;
-  cursor: pointer;
-}
 
-.change-password-button:hover {
-  text-decoration: underline;
-} */
 
 
   
 
-  /* EditPassword css */
-
-  .edit-password-container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .edit-password-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .edit-password-form div {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input[type="password"] {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+ 
   
   .button-group {
     display: flex;
@@ -516,3 +470,27 @@ margin-top: 5rem;
   
 
 /*-------- FIN CSS coach-profile  */
+
+
+
+
+@media screen and (min-width: 320px){
+  .modalsend{
+    margin-bottom: 10px;
+    height: 55px;
+  }
+}
+
+
+@media screen and (min-width: 768px){
+  .modalsend{
+    height: 45px;
+  }
+}
+
+
+@media screen and (min-width: 1024px){
+  .modalsend{
+    height: 45px;
+  }
+}
