--- a/src/pagesEtudiant/tache/tache.css
+++ b/src/pagesEtudiant/tache/tache.css
@@ -17,11 +17,11 @@ border-radius: 15px;
 }
 
 .demarétermi{
-    float: right;
+    /* float: right; */
 }
 
 .demarétermifloat{
-    float: right;
+    /* float: right; */
     position: relative;
     left: 150px;
 }
@@ -77,7 +77,7 @@ border-radius: 15px;
             } 
 
         .h5tache{
-            margin-left: -458px;
+            margin-left: -1px;
         }
 
         .lienutiles{
@@ -112,11 +112,11 @@ border-radius: 15px;
             } 
 
         .h5tache{
-            margin-left: -815px;
+            margin-left: -1px;
         }
 
         .lienutiles{
-            margin-left: -615px;
+            margin-left: 205px;
         }
 
         .h5tache1{
@@ -137,6 +137,11 @@ border-radius: 15px;
 
         .p-lien2{
             margin-left: 10px;
+        }
+
+        .a-tache{
+            margin-left: -200px;
+            font-size: 15px;
         }
 
         .a-tache1{
