--- a/src/pagesEtudiant/tache/tache.css
+++ b/src/pagesEtudiant/tache/tache.css
@@ -16,15 +16,12 @@ border-radius: 15px;
     border-right: 1px solid black;
 }
 
-.demarétermi{
-    /* float: right; */
-}
 
+/* 
 .demarétermifloat{
-    /* float: right; */
     position: relative;
     left: 150px;
-}
+} */
 
 
 
@@ -41,7 +38,7 @@ border-radius: 15px;
 
 @media screen and (min-width: 320px) {
     .mere-tache{
-        height: 320vh;
+        height: 100%;
         }
 
         .bg-tache{
@@ -69,7 +66,7 @@ border-radius: 15px;
 /* responsive mode tablet */
 @media screen and (min-width: 768px) {
     .mere-tache{
-        height: 210vh;
+        height: 100%;
         }
 
         .bg-tache{
@@ -81,7 +78,7 @@ border-radius: 15px;
         }
 
         .lienutiles{
-            margin-left: -115px;
+            margin-left: 5px;
         }
 
         .h5tache1{
@@ -98,13 +95,14 @@ border-radius: 15px;
         .a-tache1{
             margin-left: 70px;
         }
+      
 }
 
 /* responsive mode laptop */
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px){
     .mere-tache{
-        height: 200vh;
+        height: 100%;
         }
 
           .bg-tache{
@@ -144,18 +142,15 @@ border-radius: 15px;
             font-size: 15px;
         }
 
-        .a-tache1{
-            margin-left: 260px;
-            font-size: 15px;
-        }
-
-        .a-tache2{
-            margin-left: 600px;
-            font-size: 15px;
-        }
 
         .demarétermi{
-            margin-left: 90px;
+            float: right;
+        }
+
+        .demarétermi2{
+            float: right;
+            position: relative;
+            left: 120px;
         }
 
        
