--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -113,7 +113,7 @@
         box-shadow: 0 .5rem 1.5rem rgba(1, 1, 1, 0.6);
         overflow: hidden;
         z-index: 1;
-        background: rgb(20, 154, 207);
+        background: #0d6efd;
         color: white;
     }
 
