--- a/src/pagesEtudiant/livraison/livraison.css
+++ b/src/pagesEtudiant/livraison/livraison.css
@@ -10,7 +10,7 @@
 
 
 .btn-commentaire{
-    border: 1px solid rgb(130, 130, 249);
+    /* border: 1px solid rgb(130, 130, 249); */
     background: none;
 }
 
