--- a/src/pagesEtudiant/tache/tache.css
+++ b/src/pagesEtudiant/tache/tache.css
@@ -1,6 +1,5 @@
 .mere-tache{
-    background-color: rgb(224, 227, 229);
-/* height: 149vh; */
+    /* background-color: rgb(224, 227, 229); */
 }
 
 
@@ -25,6 +24,18 @@ border-radius: 15px;
     position: relative;
     left: 150px;  
 }
+
+
+
+.card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+  }
 
 
 
