--- a/src/components/SidebarAdmin.css
+++ b/src/components/SidebarAdmin.css
@@ -1,4 +1,4 @@
-.body {
+/* .body {
     margin: 0;
     padding: 0;
     width: 100%;
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Utilisation de 100vh pour couvrir l'écran complet */
+    height: 100vh; 
     position: relative;
     color: aliceblue;
   }
@@ -23,9 +23,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.85); /* Opacité noire à 50% avec rgba */
+    background-color: rgba(0, 0, 0, 0.85);
     z-index: -1;
-  }
+  } */
   
   
   :root{
@@ -71,7 +71,7 @@
           border-radius: 2px;
       }
   
-      .userIcon{
+      /* .userIcon{
           background: #8f8f8f;
           padding: 3px 10px 3px 10px ;
           border-radius: 1rem;
@@ -81,7 +81,7 @@
         font-size: 22px;
         color: rgb(20, 154, 207);
   
-      }
+      } */
   
       .title {
           text-align: center;
@@ -320,199 +320,8 @@
               margin: auto;
             }
   }
-  
-  
-  /*------- updProfileCoach css Editcoach -------*/
-  
-  .update-profile-container {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin-top: 3rem;
-    }
-    
-    .profile-info {
-      display: flex;
-      align-items: center;
-    }
-    
-    .profile-photo-container {
-      text-align: center;
-    }
-    
-    .profile-photo {
-      display: flex;
-      margin-left: auto;
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    
-    .profile-details {
-      margin-left: 20px;
-    }
-    
-    .profile-detail {
-      margin-bottom: 10px;
-    }
-    .profile-detail {
-      margin: 20px;
-    }
-    
-    .detail-label {
-      font-weight: bold;
-    }
-    
-    .change-password-button {
-      margin-top: 10px;
-      padding: 0;
-      background-color: transparent;
-      color: #000;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-    }
-    
-    .change-password-button:hover {
-      text-decoration: underline;
-    }
-    
-    .update-profile-form button{
-      margin: 15px;
-    }
-    
-    /* EditProfileCoach */.edit-profile-container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .profile-info {
-    display: flex;
-  }
-  
-  .profile-photo-container {
-    text-align: center;
-  }
-  
-  .profile-photo {
-      display: flex;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    justify-content: center;
-  align-items:  center;
-  margin-top: 5rem;
-  }
-  
-  .profile-details {
-    margin-left: 20px;
-  }
-  
-  .edit-profile-form {
-    margin-top: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .label {
-    font-weight: bold;
-  }
-  
-  .form-control {
-    width: 100%;
-    padding: 8px;
+
+  i
+  {
     border: none;
-    border-bottom: 1px solid #ccc; /* Bordure inférieure seulement */
-    outline: none; /* Supprime le focus border */
-    transition: border-color 0.2s ease-in-out;
-  }
-  
-  .form-control:focus {
-    border-color: #007bff; /* Couleur de bordure au focus */
-  }
-  
-  .button-group {
-    margin-top: 20px;
-    text-align: right;
-  }
-  
-  /* .change-password-button {
-    margin-top: 10px;
-    padding: 0;
-    background-color: transparent;
-    color: #007bff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .change-password-button:hover {
-    text-decoration: underline;
-  } */
-  
-  
-    
-  
-    /* EditPassword css */
-  
-    .edit-password-container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    
-    .edit-password-form {
-      display: flex;
-      flex-direction: column;
-    }
-    
-    .edit-password-form div {
-      margin-bottom: 15px;
-    }
-    
-    label {
-      font-weight: bold;
-    }
-    
-    input[type="password"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-    
-    .button-group {
-      display: flex;
-      justify-content: space-between;
-    }
-    
-    button {
-      padding: 10px 20px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 4px;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-    }
-    
-  
-  /*-------- FIN CSS coach-profile  */
+}
