--- a/src/pages/inscription/registe.css
+++ b/src/pages/inscription/registe.css
@@ -12,7 +12,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: skyblue; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -24,8 +23,6 @@
     font-family: sans-serif;
     padding: 30px 30px;
     padding-top: 50px;
-    background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
   
   
@@ -77,7 +74,7 @@
     border-radius: 15px;
     border: 0 !important;
     outline: 0 !important;
-    background: skyblue;
+    background: blue;
     color: white;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -93,7 +90,6 @@
     font-size: 14px;
     color: #fff;
     font-weight: 500;
-    background-color: skyblue;
     padding-top: 90px;
   }
 
