--- a/src/components/SidebarAdmin.css
+++ b/src/components/SidebarAdmin.css
@@ -1,34 +1,4 @@
-/* .body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-    position: relative;
-    color: aliceblue;
-  }
-  
-  
-  .body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.85);
-    z-index: -1;
-  } */
-  
-  
-  :root{
+:root{
       --bg-primary: #f4f5ff;
       --bg-secondary: #87ceeb;
       --bg-active: #eeebeb; 
@@ -210,22 +180,50 @@
 
 
 .iconProfile, .iconProfile-header {
-    margin-right: 5px;
+    margin: 5px;
 } 
 
-/* Header */
-.header {
-    /* grid-area: header;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 30px 0 30px;
-    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35); */
-}
 .menu-iconProfile {
     display: none;
 }
+  
+/* Personnaliser le Select */
+.dropdown-select .MuiSelect-root {
+    border: none; 
+    outline: none;
+    background: transparent; 
+  }
+  
+  .dropdown-select .MuiMenuItem-root {
+    border: none; 
+  }
+
+  /* Message et Notification */
+
+  .icon-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  
+  .nbrmssg {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+  }
+
+   .h3{
+    background-color: #000;
+    color: white;
+    padding-top: 20px;
+  }
+
+  /* Fin notification */
 
   @media only screen and (max-width: 1399px){
       .CardDash .myContent1 {
