--- a/src/pages/pageadmine/ajouteréléves/ajoutelv.css
+++ b/src/pages/pageadmine/ajouteréléves/ajoutelv.css
@@ -1,4 +1,3 @@
-/* Styles pour le conteneur de la classe */
 .laclasse {
     margin-top: 5rem;
     width: 80%;
@@ -6,56 +5,50 @@
     box-sizing: border-box;
     color: aliceblue;
     border-radius: 10px;
-    padding: 0.5rem; /* Ajouté pour mieux aligner le contenu */
+    padding: 0.5rem; 
 }
 
-/* Styles pour le conteneur d'ajout d'étudiant */
 .addetudiant {
     margin-top: 0rem;
     padding: 30px;
     background: white;
-    box-shadow: rgba(221, 203, 203, 0.6) 0px 0px 10px; /* Corrigé la syntaxe de box-shadow */
+    box-shadow: rgba(221, 203, 203, 0.6) 0px 0px 10px; 
 }
 
-/* Styles pour les champs de formulaire */
 .forme-input {
-    width: 100%; /* Changé à 100% pour occuper toute la largeur disponible dans le conteneur */
+    width: 100%; 
     height: 50px;
-    padding-right: 2.5rem; /* Assurez-vous qu'il y a assez d'espace pour l'icône */
+    padding-right: 2.5rem;
 }
 
-/* Styles pour le conteneur de sélection avec icône */
 .select-container {
     position: relative;
     display: flex;
     align-items: center;
 }
 
-/* Styles pour l'icône dans le champ de sélection */
 .select-icon {
     position: absolute;
-    right: 0.5rem; /* Ajustez cette valeur pour aligner l'icône correctement */
+    right: 0.5rem; 
     top: 50%;
     transform: translateY(-50%);
-    pointer-events: none; /* Permet de cliquer sur le champ derrière l'icône */
+    pointer-events: none;
 }
 
-/* Styles pour le conteneur du bouton pour éviter la barre de défilement horizontale */
 .addetudiant {
     margin-top: 0rem;
     padding: 30px;
     background: white;
     box-shadow: rgba(221, 203, 203, 0.6) 0px 0px 10px;
-    overflow: hidden; /* Pour éviter les barres de défilement horizontales */
+    overflow: hidden; 
 }
 
-/* Styles pour le bouton ajouter */
 .add-btn-container {
     display: flex;
-    justify-content: flex-end; /* Aligne le bouton à droite */
-    margin-top: 1rem; /* Espacement au-dessus du bouton */
+    justify-content: flex-end; 
+    margin-top: 1rem; 
 }
 
 .add-btn-container button {
-    margin: 0; /* Assure que le bouton ne dépasse pas du conteneur */
+    margin: 0;
 }
