--- a/src/pages/pageadmine/statistique/statistique.css
+++ b/src/pages/pageadmine/statistique/statistique.css
@@ -3,7 +3,14 @@
     margin: auto;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 60vh;
-    margin-top: 9rem;
+    margin-top: 5rem;
+}
+.statistique{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    margin-top: 6rem;
+
 }
