--- a/src/pages/pageadmine/users/bulletin/bulletin.css
+++ b/src/pages/pageadmine/users/bulletin/bulletin.css
@@ -1,8 +1,15 @@
 .bulletin{
-    /* border: 1px solid black; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
+    color: hsl(197, 80%, 46%);
+    font-weight: 700; 
+    font-size: 1.5rem;
+}
 
+.h5{
+    color: hsl(197, 80%, 46%);
+    font-weight: 700; 
+    font-size: 2rem;
 }
 
 .table-shadow {
