--- a/src/pages/pageadmine/users/cours/cours.css
+++ b/src/pages/pageadmine/users/cours/cours.css
@@ -1,23 +1,33 @@
-.courstitre h3{
-    margin-top: 6rem;
+.courstitre h2{
+    margin-top: 5rem;
     color: #179fd4;
 }
 
 .div_h4{
     color: #179fd4;
     font-weight: 600;
-    text-align: center;
+    /* text-align: end; */
 }
 
 .courshtml{
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 .coursbootstrap{
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 .coursimg{
-    width: 100%;
-    height: 50vh;
+    width: 90%;
+    height: 100%;
     margin-top: 20px;
+    margin: auto;
+}
+.card{
+width: 85%;
+height: 100%;
+box-sizing: border-box;
+border: 2px solid #95d1e9;
+border-radius: 20px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
