--- a/src/pages/pageadmine/users/personnels/personnels.css
+++ b/src/pages/pageadmine/users/personnels/personnels.css
@@ -1,3 +1,7 @@
-.tabpersonl{
-    /* margin-top: 5rem; */
+.main2{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-top: 4.5rem;
 }
