--- a/src/pagesEtudiant/demande/demande.css
+++ b/src/pagesEtudiant/demande/demande.css
@@ -16,7 +16,7 @@
 
 
 @media screen and (min-width: 320px){
-    .buttoncsv{
+    .button_csv{
         margin-left: 100px;
     }  
 }
@@ -25,7 +25,7 @@
 
 
 @media screen and (min-width: 768px){
-    .buttoncsv{
+    .button_csv{
         margin-left: -200px;
     }
 }
@@ -39,7 +39,7 @@
 
 
 @media screen and (min-width: 1024px){
-    .buttoncsv{
+    .button_csv{
         margin-left: -500px;
     } 
 }
