--- a/src/Agenda.css
+++ b/src/Agenda.css
@@ -16,8 +16,8 @@
 }
 
 .agenda-header {
-    background-color: var(--primary-color);
-    color: white;
+    background-color: white;
+    color: black;
     padding: 20px;
     text-align: center;
 }
@@ -32,13 +32,14 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: var(--secondary-color);
+
+    background-color:white;
 }
 
 .agenda-nav button {
     background: none;
     border: none;
-    color: white;
+    color: black;
     cursor: pointer;
     font-size: 1em;
     padding: 5px 10px;
@@ -97,7 +98,7 @@
 }
 
 .add-event {
-    background-color: var(--secondary-color);
+    background-color: #0d6efd;
     border: none;
     border-radius: 5px;
     color: white;
@@ -108,5 +109,5 @@
 }
 
 .add-event:hover {
-    background-color: #27ae60;
+    background-color: #0d6efd;
 }
