--- a/src/components/SidebarAdmin.css
+++ b/src/components/SidebarAdmin.css
@@ -188,14 +188,18 @@
 }
   
 /* Personnaliser le Select */
-.dropdown-select .MuiSelect-root {
-    border: none; 
+.dropdown-select{
     outline: none;
     background: transparent; 
+    color: #fff;
+    border: none;
   }
-  
-  .dropdown-select .MuiMenuItem-root {
-    border: none; 
+
+  .dropdown-select .MuiSelect-select .MuiSelect-outlined .MuiInputBase-input .MuiOutlinedInput-input .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input{
+    outline: none;
+    border: none;
+    border-radius: none;
+    background-color: transparent;
   }
 
   /* Message et Notification */
