--- a/src/pages/auth/login.css
+++ b/src/pages/auth/login.css
@@ -83,8 +83,9 @@
 
   .learningimg{
     box-sizing: border-box;
-    width: 200px;
-    height: 150px;
+    width: 150px;
+    height: 120px;
+    border-radius: 50%;
     margin-top: -20px;
   }
 
