--- a/src/pages/pageadmine/ajouteréléves/ajoutelv.css
+++ b/src/pages/pageadmine/ajouteréléves/ajoutelv.css
@@ -1,11 +1,11 @@
-.laclasse {
+.laclasses {
     margin-top: 5rem;
     width: 80%;
     background-color: #179fd4;
     box-sizing: border-box;
     color: aliceblue;
     border-radius: 10px;
-    padding: 0.5rem; 
+    padding: 0.2rem; 
 }
 
 .addetudiant {
@@ -17,7 +17,7 @@
 
 .forme-input {
     width: 100%; 
-    height: 50px;
+    height: 40px;
     padding-right: 2.5rem;
 }
 
