--- a/src/pages/pageadmine/users/cours/cours.css
+++ b/src/pages/pageadmine/users/cours/cours.css
@@ -17,11 +17,13 @@
 }
 
 .coursimg{
-    width: 90%;
+    width: 100%;
     height: 100%;
     margin-top: 20px;
     margin: auto;
+    padding: 10px;
 }
+
 .card{
 width: 85%;
 height: 100%;
