--- a/src/pages/inscription/registe.css
+++ b/src/pages/inscription/registe.css
@@ -1,9 +1,9 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-}
+} */
 .body2 {
     margin: 0;
     padding: 0;
@@ -21,8 +21,8 @@
   .container-form2 {
     box-sizing: border-box;
     font-family: sans-serif;
-    padding: 30px 30px;
-    padding-top: 50px;
+    padding: 20px 20px;
+    padding-top: 30px;
   }
   
   
@@ -30,7 +30,7 @@
     text-align: start;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    margin: 10px 0 30px 0;
+    margin: 10px 0 20px 0;
     font-weight: 500;
   }
   
@@ -41,14 +41,13 @@
     gap: 20px;
     margin-bottom: 15px;
   }
-  
+  input::placeholder{
+    
+  }
   .input {
-    border-radius: 15px;
-    border: 1px solid skyblue;
-    outline: 0 !important;
-    padding: 20px 35px;
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    padding: 1rem 1rem 1rem 3rem;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  */
   }
   
   .page-link-label {
@@ -67,11 +66,11 @@
   }
   
   .form-btn {
-    padding: 15px 20px;
-    width: 50%;
+    width: 100%;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     border-radius: 15px;
+    padding: 1rem 5rem 1rem 5rem ;
     border: 0 !important;
     outline: 0 !important;
     background: blue;
@@ -95,32 +94,35 @@
 
   .icone3{
     position: absolute;
-    top: 9.7rem;
-    left: 2.3rem;
-    font-size: 35px;
+    font-size: 30px;
     color: rgb(77, 161, 194)
   }
 
   .icone4{
     position: absolute;
-    top: 15.3rem;                
-    left: 2.5rem;
-    font-size: 30px;
+    top: 13.9rem;                
+
+    font-size: 25px;
     color: rgb(77, 161, 194)
   }
 
   .icone5{
     position: absolute;
-    top: 20.6rem;                
-    left: 2.5rem;
-    font-size: 30px;
+    /* top: 22.6rem;                 */
+    /* left: 2.5rem; */
+    font-size: 25px;
     color: rgb(77, 161, 194)
   }
 
   .icone6{
     position: absolute;
-    top: 26rem;                
-    left: 2.5rem;
-    font-size: 30px;
+    /* top: 22.6rem;                 */
+              
+    font-size: 25px;
     color: rgb(77, 161, 194)
+  }
+
+  .md-3{
+    display: flex;
+    /* justify-content: space-around; */
   }
