--- a/src/pages/pageadmine/users/personnels/personnels.css
+++ b/src/pages/pageadmine/users/personnels/personnels.css
@@ -5,3 +5,9 @@
     margin-left: auto;
     margin-top: 4.5rem;
 }
+.data-grid-container {
+    width: 100%;
+  height: 420px; 
+  overflow: hidden;
+  margin-top: 2rem; 
+}
