--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -89,6 +89,20 @@
 
     }
 
+    .notification-count {
+      background-color: red;
+      color: white;
+      border-radius: 50%;
+      padding: 0.2em 0.5em;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 0.8em;
+    }
+
+    
+    
+
     .title {
         text-align: center;
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
