--- a/src/App.css
+++ b/src/App.css
@@ -490,13 +490,12 @@ body{
     overflow: hidden;
   }
   .notification-header {
-    background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-    color: white;
+    color: black;
     padding: 20px;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
-    border-radius: 5px;
+    background-color: #0843a9;
 
   }
   .notification-list {
@@ -510,17 +509,22 @@ body{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-top: 15px;
     background-color: rgba(255, 255, 255, 0.95);
+    border-left: 5px solid  #3498db;
 
     
-
   }
+
+
+
+
   .notification-item {
-    background-color: #f8f9fa;
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
     transition: all 0.3s ease;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow: scroll;
+    
+    height: 400px;
   }
   .notification-list:hover {
     transform: translateY(-2px);
@@ -577,3 +581,51 @@ body{
       opacity: 1;
     }
   }
+
+
+  .css-3bmhjh-MuiPaper-root-MuiPopover-paper {
+    background-color: #fff;
+    color: rgba(0, 0, 0, 0.87);
+    -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 10px !important;
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
+    position: absolute;
+    overflow-y: auto;
+    overflow-x: hidden;
+    min-width: 16px;
+    min-height: 16px;
+    max-width: calc(30% - 32px)!important;
+    max-height: calc(100% - 32px);
+    outline: 0;
+    
+
+}
+
+.ListemButton{
+    background: #15ca20;
+}
+
+
+.css-192lqk4-MuiDataGrid-root .MuiDataGrid-columnHeader {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    background-color:#2979ff !important;
+}
+
+
+.css-192lqk4-MuiDataGrid-root .MuiDataGrid-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: var(--DataGrid-rowWidth);
+    break-inside: avoid;
+    --rowBorderColor: var(--DataGrid-rowBorderColor); 
+}
