--- a/src/pages/pageadmine/users/updateUsers/updateStudent.css
+++ b/src/pages/pageadmine/users/updateUsers/updateStudent.css
@@ -1,17 +1,76 @@
-.titrmodifier{
-color: #4e73df;
-font-weight: bold;
-font-size: 1.5rem;
-}
+.update-student-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 10px;
+    margin-top: 6rem;
+  }
 
-.updatestudent{
-    margin-top: 1rem;
-    padding: 30px;
-    background: white;
-    box-shadow: rgba(221, 203, 203, 0.6) 0px 0px 10px; 
-}
-
-.updatestudent .forme-input{
-    margin: 10px;
-    
-}
+  .update-student-container h2{
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #179fd4;
+    margin-bottom: 20px;
+  }
+  
+  .form-container {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .form-group {
+    margin-bottom: 10px;
+  }
+  
+  .image-preview {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    width: 100px;
+    height: 50px;
+  }
+  
+  .file-input {
+    margin-top: 10px;
+  }
+  
+  .form-input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    background: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 5px;
+  }
+  
+  .button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+  
+  .btn-update {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .btn-back {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .btn-update:hover, .btn-back:hover {
+    opacity: 0.8;
+  }
+  
