--- a/src/eleves.css
+++ b/src/eleves.css
@@ -1,14 +1,18 @@
-.card {
-    box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
-}
+
+
 .avatar.sm {
     width: 2.25rem;
     height: 2.25rem;
     font-size: .818125rem;
 }
-.table-nowrap .table td, .table-nowrap .table th {
+
+
+
+.table-nowrap td, .table-nowrap th {
     white-space: nowrap;
 }
+
+
 .table>:not(caption)>*>* {
     padding: 0.75rem 1.25rem;
     border-bottom-width: 1px;
@@ -17,3 +21,8 @@ table th {
     font-weight: 600;
     background-color: #eeecfd !important;
 }
+
+
+
+
+
