--- a/src/pages/pageadmine/users/personnels/personnels.css
+++ b/src/pages/pageadmine/users/personnels/personnels.css
@@ -11,14 +11,14 @@
 .rowsbutt {
   color: #fff;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 600;
-  margin-right: 10px;
+  /* margin-right: 5px; */
 }
 .rowsbutt:hover {
   color: #fff;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 600;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
