--- a/src/pages/pageadmine/profile/profile.css
+++ b/src/pages/pageadmine/profile/profile.css
@@ -1,12 +1,12 @@
-.profile{
+.profiles{
     display: flex;
-margin: auto;
+    margin: auto;
 
     justify-content: center;
     align-items: center;
     padding: 40px;
-    width: 70%;
-    margin-top: 4rem;
+    width: 80%;
+    margin-top: 3rem;
 }
 
 .titr_profile{
@@ -15,8 +15,8 @@ margin: auto;
 }
 
 .profile-photo{
-   width: 90%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
    border-radius: 50%;
    margin-top: 10px;
    margin-left: auto;
@@ -24,4 +24,5 @@ margin: auto;
 .change-password-button{
     text-decoration: none;
     color: gray;
+    font-size: 13px;
 }
