--- a/src/login.css
+++ b/src/login.css
@@ -62,7 +62,7 @@
   border-radius: 15px;
   border: 0 !important;
   outline: 0 !important;
-  color: rgb(77, 161, 194);
+  background: blue;
   color: white;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
