--- a/src/App.css
+++ b/src/App.css
@@ -586,6 +586,7 @@ body{
 
 
   .css-3bmhjh-MuiPaper-root-MuiPopover-paper {
+    background-color:#2979ff !important;
     color: rgba(0, 0, 0, 0.87);
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
