--- a/src/App.css
+++ b/src/App.css
@@ -130,9 +130,9 @@ body{
 body{
     margin-top:20px;
 }
-/* .bg-light-gray {
+.bg-light-gray {
     background-color: #f7f7f7;
-} */
+}
 .table-bordered thead td, .table-bordered thead th {
     border-bottom-width: 2px;
 }
@@ -249,6 +249,7 @@ body{
 body{
     margin-top:20px;
     background-color: #f7f7ff;
+    
     }
     .radius-10 {
         border-radius: 10px !important;
