--- a/src/App.css
+++ b/src/App.css
@@ -242,14 +242,13 @@ body{
 
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-    background-color: #121213 !important;
+    background-color: #0d6efd !important;
 }
 
   
 body{
     margin-top:20px;
     background-color: #f7f7ff;
-    
     }
     .radius-10 {
         border-radius: 10px !important;
